# 20-Agentic-Ai-Practice-Proojects-SpeedRun

./: .gitignore  LangChain & LangGraph Practice Projects Roadmap.md  Readme.md  main.py  pyproject.toml
1. LCEL Text Generation Pipeline/: app.py
1. LCEL Text Generation Pipeline/chains/: Motivational_quote_generator_prompt.py  Summary_generator_chain.py
1. LCEL Text Generation Pipeline/prompts/: Motivational_quote_generator_prompt.py  Summary_generator_prompt.py  joke_prompt.py
10. LangGraph StateGraph Workflow/Conditional workflow/: QuadatricEquationWorkflow.ipynb  ReviewReplyWorkflow.ipynb
10. LangGraph StateGraph Workflow/parallel_workflow/: first_workflow.ipynb
10. LangGraph StateGraph Workflow/sequential_workflow/: sequential_workflow2.ipynb
2. Custom Tool and Agent Basics/: README.md  app.py
2. Custom Tool and Agent Basics/Agent/: agent.py
2. Custom Tool and Agent Basics/calculator_tool/: tool.py
2. Custom Tool and Agent Basics/wikipedia_tool/: tool.py
3. Retrieval Q&A with Document Loaders/: README.md  app.py
3. Retrieval Q&A with Document Loaders/Document Loader/: directory_loader.ipynb  text_loader.ipynb  web_based_loader.ipynb
3. Retrieval Q&A with Document Loaders/Retreival/: retrieve.py
3. Retrieval Q&A with Document Loaders/Retriever/: ContextualCompressionRetriever.ipynb  Maximum_marginal_relevance_retriever.ipynb  Multiquery Retriever.ipynb  wikipedia_retriever.ipynb
3. Retrieval Q&A with Document Loaders/Text Splitter/: length_based.ipynb  semantic_based_splittter.ipynb
3. Retrieval Q&A with Document Loaders/Vector Store/: chromea_bd.ipynb
3. Retrieval Q&A with Document Loaders/Youtube Chatbot/: yt_chatbot.ipynb
3. Retrieval Q&A with Document Loaders/document_loaders/: pdfText.txt  pdf_loader.py
3. Retrieval Q&A with Document Loaders/embeddings/: embedding.py
3. Retrieval Q&A with Document Loaders/ingestion/: ingestion.py
3. Retrieval Q&A with Document Loaders/llm/: geminiAi.py
3. Retrieval Q&A with Document Loaders/text_splitters/: Chunking.py
5. Structured Output and Output Parsing/: text.py
5. Structured Output and Output Parsing/Output Parser/: StrOutputParser.ipynb
6. Web-Enabled RAG Agent with Search API/: agent.py  app.py  custom_tool.py  print.py  system_prompt.txt
6. Web-Enabled RAG Agent with Search API/Ingestion/: chunker.py  cleaner.py  search_tool.py
6. Web-Enabled RAG Agent with Search API/embeddings/: embedding_model.py
6. Web-Enabled RAG Agent with Search API/llm/: gemini.py
9. ReAct Agent with Multiple Tools/: agent.py  app.ipynb  tool_merge.py
A. LCEL Text Generation Pipeline/: README.md
C. Retrieval Q&A with Document Loaders/: README.md
E. Structured Output and Output Parsing/: README.md  sturctured_output.ipynb
F. Web-Enabled RAG Agent with Search API/: README.md
I. ReAct Agent with Multiple Tools/: Readme.md
J. LangGraph StateGraph Workflow/: Readme.md
K. Multimodal Question Answering Agent/: Readme.md  agent.py  app.py  image_utils.py  ui.py
M. LangGraph Multi-Agent Supervisor/: Readme.md  supervisor_agent.ipynb
Telegram Bot/Bot/: bot.py  (+2 more)
(+32 files in other folders)
