[project]
name = "agentic-ai-practice-speedrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "rich>=15.0.0",
    "wikipedia>=1.4.0",
]
