[project]
name = "agentic-ai-practice-speedrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "google-generativeai>=0.8.6",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "nbformat>=5.10.4",
    "pillow>=12.2.0",
    "pip>=26.1.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pypdf>=6.13.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
