[project]
name = "agentic-ai-practice-speedrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "faster-whisper>=1.2.1",
    "google-generativeai>=0.8.6",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "nbformat>=5.10.4",
    "pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "pip>=26.1.2",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pyowm>=3.5.0",
    "pypdf>=6.13.2",
    "python-telegram-bot>=22.8",
    "reportlab>=4.5.1",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "sympy>=1.14.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]